--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 .home{
     padding-left: 10px;
     font-size: 15px;
-    /* text-decoration: none; */
+    text-decoration: none;
 
  }
 .signup{
@@ -136,4 +136,81 @@ label {
     font-weight: bold;
     border: 1px solid black;
     border-radius: 3px;
+}
+.marq{
+    background-color: rgb(192, 153, 228);
+   padding-top: 3px;
+}
+.container{
+    background-color: rgb(197, 197, 113);
+    height: 370px;
+    width: 990px;
+    margin: auto;
+    margin-top: 10px;
+    /* margin-left: 10px; */
+    
+}
+.heading{
+    margin-top: 10px 10px;
+    padding-top: 10px;
+
+}
+.cont{
+    background-color: white;
+    height: 280px;
+    width: 200px;
+   margin: 20px 20px;
+   border-radius: 3px;
+  display: inline-block;
+
+}
+.imeg{
+    height: 160px;
+    width: 150px;
+    margin-left: 25px;
+    /* padding-bottom: 20px; */
+}
+.name{
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+.price{
+    background-color: rgb(213, 234, 234);
+    border-radius: 12px;
+    margin-top: 10px;
+    margin-left: 35px;
+    padding: 5px 5px;
+    font-size: 18px;
+    display: inline-block;
+
+}
+.price::before {
+    content: "\09F3"; /* Unicode for Taka sign */
+    margin-right: 2px;
+}
+.pack{
+    background-color: rgb(213, 234, 234);
+    border-radius: 12px;
+    margin-top: 10px;
+    margin-left: 3px;
+    padding: 5px 5px;
+    font-size: 18px;
+}
+.additem{
+    background-color: rgb(11, 223, 223);
+    border-radius: 12px;
+    margin-top: 10px;
+    margin-left: 40px;
+    padding: 5px 5px;
+    font-size: 18px;
+    text-decoration: none;
+    display: inline-block;
+    box-sizing: border-box;
+    border: 1px solid black;
+}
+.additema{
+    text-decoration: none;
+    font-size: 18px;
+    padding: 8px 8px;
 }
